--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,23 @@
-version: '3.9'
+
 
 networks:
   bridge:
     driver: bridge
 
 services:
-  nginx:
-    image: nginx:1.22
-    networks:
-      - bridge
-    links:
-      - php
-    ports:
-      - "80:80"
-    volumes:
-      - ./laravel:/var/www/html
-      - ./vendor:/var/www/html/vendor
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-    environment:
-      - TZ=Europe/Moscow
-    depends_on:
-      - php
-
-  php:
-    image: php:8.2.6-fpm
+  react_app:
+    build:
+      context: react_app
+      target: development
     networks:
       - bridge
     links:
       - mysql
+    ports:
+      - "3000:3000"
     volumes:
-      - ./laravel:/var/www/html
-      - ./vendor:/var/www/html/vendor
+      - ./react_app/src:/code/src
+      - /code/node_modules
     environment:
       - TZ=Europe/Moscow
       - MYSQL_ROOT_PASSWORD=rootPassword
